--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Mysterise/FacelessChat#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "interactjs": "^1.3.3",
     "socket.io": "^2.1.0"
   }
 }
